<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/menu_jugar"
        android:icon="@android:drawable/ic_menu_view"/>

    <item
        android:id="@+id/nav_online"
        android:title="@string/menu_online"
        android:icon="@android:drawable/ic_menu_share"/>

    <item
        android:id="@+id/nav_ranking"
        android:title="TOP 10 Ranking"
        android:icon="@android:drawable/btn_star_big_on"/>

    <item
        android:id="@+id/nav_history"
        android:title="@string/menu_ranking"
        android:icon="@android:drawable/ic_menu_myplaces"/>

    <item
        android:id="@+id/nav_help"
        android:title="@string/menu_ayuda"
        android:icon="@android:drawable/ic_menu_help"/>

    <item
        android:id="@+id/nav_music_selector"
        android:title="@string/menu_selector_musica"
        android:icon="@drawable/ic_music_note"/>

    <item
        android:id="@+id/nav_settings"
        android:title="@string/menu_configuracion"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/nav_sign_out"
        android:title="@string/menu_cerrar_sesion"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"/>

    <item
        android:id="@+id/nav_sign_in"
        android:title="@string/menu_sign_in"
        android:icon="@android:drawable/ic_menu_add"/>


    <!-- TODO Para la siguiente versión
    <item
        android:id="@+id/nav_profile"
        android:title="@string/menu_perfil"
        android:icon="@android:drawable/ic_menu_manage"/>

    <item
        android:id="@+id/nav_settings"
        android:title="@string/menu_configuracion"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/nav_sign_out"
        android:title="@string/menu_cerrar_sesion"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"/>

    <item
        android:id="@+id/nav_sign_in"
        android:title="@string/menu_sign_in"
        android:icon="@android:drawable/ic_menu_add"/>

    -->

</menu>