<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:fitsSystemWindows="true"
    tools:context=".ui.juego.JuegoFragment">

    <!-- Indicador de Saldo -->
    <TextView
        android:id="@+id/tvSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_haz_apuesta"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Área de mensaje de resultado -->
    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/msg_haz_apuesta"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvSaldo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Campo de entrada para la apuesta -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilApuesta"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/cantidad_a_apostar"
        app:layout_constraintTop_toBottomOf="@id/tvMensaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etApuesta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="1"
            tools:ignore="HardcodedText" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón CARA -->
    <Button
        android:id="@+id/btnCara"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FFC107"
        android:text="@string/btn_cara"
        app:layout_constraintEnd_toStartOf="@+id/btnCruz"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilApuesta"
        tools:ignore="TextContrastCheck" />

    <!-- Botón CRUZ -->
    <Button
        android:id="@+id/btnCruz"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_cruz"
        android:backgroundTint="#757575"
        app:layout_constraintTop_toTopOf="@id/btnCara"
        app:layout_constraintStart_toEndOf="@id/btnCara"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Guía visual para la moneda (donde irán las animaciones después) -->
    <ImageView
        android:id="@+id/ivMoneda"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="32dp"
        android:importantForAccessibility="no"
        android:src="@drawable/logocaraocruz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCara"
        app:layout_constraintVertical_bias="0.05" />


</androidx.constraintlayout.widget.ConstraintLayout>